<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GasLeak">

    <Button
        android:id="@+id/button17"
        android:layout_width="140dp"
        android:layout_height="128dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="call"
        android:text="@string/callUtility"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />

    <Button
        android:id="@+id/button18"
        android:layout_width="140dp"
        android:layout_height="128dp"
        android:layout_marginTop="8dp"
        android:onClick="call911"
        android:text="@string/call911"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="140dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/first"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="140dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/second"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/button17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button18"
        app:layout_constraintVertical_bias="0.924" />
</android.support.constraint.ConstraintLayout>