<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="update_nums"
        android:text="@string/update_numbers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <!--<TextView-->
        <!--android:id="@+id/textView3"-->
        <!--android:layout_width="232dp"-->
        <!--android:layout_height="85dp"-->
        <!--android:layout_marginTop="88dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:text="@string/lifeThreatening"-->
        <!--android:textSize="30sp"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/button"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintVertical_bias="0.04" />-->

    <!--<Button-->
        <!--android:id="@+id/button2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:onClick="yes"-->
        <!--android:text="@string/yes"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <!--<Button-->
        <!--android:id="@+id/button3"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginBottom="5dp"-->
        <!--android:onClick="no"-->
        <!--android:text="@string/no"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/button"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/button2" />-->


    <TextView
        android:id="@+id/textView"
        android:layout_width="239dp"
        android:layout_height="@android:dimen/thumbnail_width"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/lifeThreatening"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <Button
        android:id="@+id/Yes"
        android:layout_width="116dp"
        android:layout_height="94dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:background="@color/colorAccent"
        android:onClick="yes"
        android:text="@string/yes"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Minor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Minor"
        android:layout_width="116dp"
        android:layout_height="94dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="250dp"
        android:background="@android:color/holo_red_light"
        android:onClick="no"
        android:text="@string/no"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</android.support.constraint.ConstraintLayout>